add stream option

--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "iojs-nanomsg",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "nanomsg for iojs",
   "dependencies": {
     "bindings": "~1.2.1",
-    "nan": "~1.5.1"
+    "nan": "~1.5.1",
+    "duplexify":"~3.2.0"
   },
   "devDependencies":{
     "mocha":  "~2.1.0",
