--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "iojs-nanomsg",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "description": "nanomsg for iojs",
   "dependencies": {
     "bindings": "~1.2.1",
@@ -18,7 +18,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/reqshark/nmsg"
+    "url": "git://github.com/reqshark/nanomsg.iojs"
   },
   "scripts": {
     "travis-test": "make check"
