--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "duplexify":"~3.2.0"
   },
   "devDependencies":{
+    "through":"~2.3.6",
     "mocha":  "~2.1.0",
     "semver": "~4.1.1",
     "should": "~4.3.1"
