--- a/.travis.yml
+++ b/.travis.yml
@@ -1,19 +1,34 @@
 os:
   - linux
 env:
-#  - NODE_V="0.8"
-  - NODE_VERSION="0.10"
-  - NODE_VERSION="0.11"
-  - NODE_VERSION="iojs-v1.0.3"
+  - NODE_VERSION="0.10" NANOMSG="git://github.com/nanomsg/nanomsg.git -b 0.3-beta"
+  - NODE_VERSION="0.11" NANOMSG="git://github.com/nanomsg/nanomsg.git -b 0.3-beta"
+  - NODE_VERSION="iojs-v1.0.3" NANOMSG="git://github.com/nanomsg/nanomsg.git -b 0.3-beta"
+  - NODE_VERSION="0.10" NANOMSG="git://github.com/nanomsg/nanomsg.git -b 0.4-beta"
+  - NODE_VERSION="0.11" NANOMSG="git://github.com/nanomsg/nanomsg.git -b 0.4-beta"
+  - NODE_VERSION="iojs-v1.0.3" NANOMSG="git://github.com/nanomsg/nanomsg.git -b 0.4-beta"
+  - NODE_VERSION="0.10" NANOMSG="git://github.com/nanomsg/nanomsg.git -b 0.5-beta"
+  - NODE_VERSION="0.11" NANOMSG="git://github.com/nanomsg/nanomsg.git -b 0.5-beta"
+  - NODE_VERSION="iojs-v1.0.3" NANOMSG="git://github.com/nanomsg/nanomsg.git -b 0.5-beta"
+  - NODE_VERSION="0.10" NANOMSG="git://github.com/nanomsg/nanomsg.git"
+  - NODE_VERSION="0.11" NANOMSG="git://github.com/nanomsg/nanomsg.git"
+  - NODE_VERSION="iojs-v1.0.3" NANOMSG="git://github.com/nanomsg/nanomsg.git"
 before_install:
-  - echo -e "echo nothing to configure" >> configure && chmod a+x configure
+  - pwd
+  - ls -la
   - rm -rf ~/.nvm
   - git clone https://github.com/creationix/nvm.git ~/.nvm
   - source ~/.nvm/nvm.sh
   - nvm install $NODE_VERSION
   - node -v
-  - git clone --depth 1 git://github.com/nanomsg/nanomsg.git nanomsg
+  - git clone $NANOMSG nanomsg
   - cd nanomsg && ./autogen.sh && ./configure && make
   - sudo make install && sudo /sbin/ldconfig
   - cd ..
+git:
+  depth: 1
+branches:
+  only:
+    - master
 language: c
+script: make && make check
