--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "iojs-nanomsg",
-  "version": "0.0.10",
+  "version": "0.1.0",
   "description": "nanømsg for iojs",
   "dependencies": {
     "bindings": "~1.2.1",
@@ -25,7 +25,9 @@
     "travis-test": "make check"
   },
   "homepage": "http://msg.pub",
-  "keywords": ["nanomsg","native","binding","addon","nn","nanømsg"],
+  "keywords": [
+    "nanomsg","native","binding","addon","nn","message","streams","nanømsg"
+  ],
   "author":{
     "name":   "Bent Cardan",
     "email":  "bent@nothingsatisfies.com",
